Update README.md with latest changes